# Parallel_computing_2023

./: .gitignore  CMakeLists.txt  readme.md
codes_1/: CMakeLists.txt  matmul_0.c  matmul_1.c  matmul_1_my_type.c  matmul_2(1).c  matmul_3(1).c  matvec_0.c  matvec_0_my_type.c  matvec_1.c
codes_2/: CMakeLists.txt  gepp_0.c  gepp_0_my_type.c  gepp_4.c
codes_3/: CMakeLists.txt  matrix_mul_using_openmp.c  omp_hello.c  scan_oper_using_openmp.c  time_comparsion.c
codes_4/: A_AT_openmp.c  CMakeLists.txt  mm_sym_0.c
codes_5/: CMakeLists.txt  test.c
codes_6/: CMakeLists.txt  mpi_comm_0.c  mpi_comm_1.c  mpi_comm_2.c  mpi_comm_3.c
homework/7.10-Homework 1 Matrix Multiplication with Loop Unrolling/: echarts.txt  matmul_1_my_type.c
homework/7.12-Lab exercise Gaussian Elimination with Unrolling/: gepp_0_my_type.c
homework/7.14-1/: 数据.xlsx
homework/7.14-Homework Parrallel Scan Operation/: scan_oper_using_openmp.c  扫描数据.xlsx
homework/7.14-Lab Exercise Reduction Operation/: time_comparsion.c
homework/7.14-Lab exercise OpenMP Hello World/: omp_hello.c
homework/7.14-Lab exercise OpenMP Matrix Multiplication/: 循环数据.xlsx
