cmake_minimum_required(VERSION 3.25)
project(codes_1 C)

set(CMAKE_C_STANDARD 11)

add_executable(codes_1
#        matmul_0.c
#        matmul_1.c
        matmul_1_my_type.c
#        "matmul_2(1).c"
#        "matmul_3(1).c"
#        matvec_0.c
#        matvec_0_my_type.c
#        matvec_1.c
#        matvec_2.c
#        mpi_hello.c
#        omp_hello.c
        )
